--- a/static/style.css
+++ b/static/style.css
@@ -17,6 +17,9 @@
   left: 25%;
   width: 50%;
   height: 100%;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
 
 html, body {
@@ -25,6 +28,8 @@ html, body {
   padding: 0;
   margin: 0;
   user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
 
 .bear {
