--- a/static/style.css
+++ b/static/style.css
@@ -20,7 +20,7 @@
   user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
-  pointer-events: auto;
+  pointer-events: none;
   -webkit-touch-callout: none;
 }
 
@@ -33,6 +33,7 @@ html, body {
   -moz-user-select: none;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
+  cursor: default;
 }
 
 .bear {
