--- a/static/style.css
+++ b/static/style.css
@@ -20,7 +20,7 @@
   user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
-  pointer-events: none;
+  pointer-events: auto;
   -webkit-touch-callout: none;
 }
 
