--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,10 @@
 .sample {
   visibility: hidden;
   position: fixed;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 .container-bear, .container-cat {
